--- a/Dev/Bara.Sample.Web/Views/_ViewImports.cshtml
+++ b/Dev/Bara.Sample.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using Bara.Sample.Web
-@namespace Bara.Sample.Web.Pages
+@using Bara.Sample.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
